<resources>
    <string name="pcapdroid_app_name" translatable="false">eXcap</string>
    <string name="default_collector_host" translatable="false">127.0.0.1</string>
    <string name="default_collector_port" translatable="false">1234</string>
    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
    <string name="ipv6_and_port" translatable="false">[%1$s]:%2$d</string>
    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
    <string name="sni" translatable="false">SNI</string>
    <string name="url" translatable="false">URL</string>
    <string name="whois_lookup" translatable="false">WHOIS</string>
    <string name="installation_id" translatable="false">Installation ID</string>
    <string name="license_code" translatable="false">License code</string>
    <string name="root" translatable="false">root</string>
    <string name="app_license" translatable="false">eXcap is a modified distribution based on the GPL-licensed
        <a href='https://github.com/emanuele-f/PCAPdroid'>PCAPdroid</a> project by Emanuele Faranda. Upstream authorship
        and notices are preserved. eXcap is provided WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
        <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License v3 or later</a>
        for details.</string>
    <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br />\n\n
        - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>LGPL-3.0</a>\n\n
        - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
        - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Brotli decoder: <a href='https://github.com/google/brotli/blob/master/LICENSE'>MIT</a>\n\n
        - zstd: <a href='https://github.com/facebook/zstd/blob/dev/COPYING'>GPL-2.0</a>\n\n
        - mitmproxy: <a href='https://github.com/mitmproxy/mitmproxy/blob/main/LICENSE'>MIT</a>\n\n
        - Chaquopy: <a href='https://github.com/chaquo/chaquopy/blob/master/LICENSE.txt'>MIT</a>\n\n
        - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
        - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
        - AppIntro: <a href='https://github.com/AppIntro/AppIntro/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - QrGenerator: <a href='https://github.com/androidmads/QRGenerator/blob/master/LICENSE.md'>MIT</a>\n\n
        - Sparsehash: <a href='https://github.com/sparsehash/sparsehash/blob/master/COPYING'>BSD-3-Clause</a>\n\n
        - CIDRUtils: <a href='https://github.com/edazdarevic/CIDRUtils'>MIT</a>\n\n
        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
        - eXcap visual identity: original project artwork\n\n
        - SourceCodePro font: <a href='https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md'>OFL-1.1</a>\n\n
        </string>
    <string name="wireshark_licenses" translatable="false"><b>PCAP Decryption:</b><br />\n\n
        - Wireshark: <a href='hhttps://github.com/wireshark/wireshark/blob/master/COPYING'>GPL-2.0</a>\n\n
        - ushark: <a href='https://github.com/altafinance/ushark'>GPL-2.0</a>\n\n
        - libiconv: <a href='https://www.gnu.org/software/libiconv'>LGPL-2.1</a>\n\n
        - glib: <a href='https://gitlab.gnome.org/GNOME/glib/-/blob/main/COPYING'>LGPL-2.1</a>\n\n
        - gpgerror: <a href='https://github.com/gpg/libgpg-error/blob/master/COPYING'>LGPL-2.1</a>\n\n
        - gcrypt: <a href='https://gnupg.org/software/libgcrypt/index.html'>LGPL-2.1</a>\n\n
        - nghttp2: <a href='https://github.com/nghttp2/nghttp2/blob/master/COPYING'>MIT</a>\n\n
        </string>
    <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,PackageName,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
    <string name="unlock_token" translatable="false">Unlock token</string>
    <string name="method_get" translatable="false">GET</string>
    <string name="method_post" translatable="false">POST</string>
    <string name="plus_n" translatable="false">+%1$d</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="collector_info">UDP collector: %1$s:%2$d</string>
    <string name="tcp_collector_info">TCP collector: %1$s:%2$d</string>
    <string name="http_server_status">HTTP server: http://%1$s:%2$d</string>
    <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
    <string name="query">Query</string>
    <string name="host">Host</string>
    <string name="ready">Ready</string>
    <string name="about">About</string>
    <string name="status">Status</string>
    <string name="connections_view">Connections</string>
    <string name="no_connections">No connections</string>
    <string name="connection_details">Connection details</string>
    <string name="app">App</string>
    <string name="protocol">Protocol</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="packets">Packets</string>
    <string name="duration">Duration</string>
    <string name="http_server">HTTP server</string>
    <string name="udp_exporter">UDP exporter</string>
    <string name="tcp_exporter">TCP exporter</string>
    <string name="tcp_udp_exporter">TCP/UDP exporter</string>
    <string name="no_dump">No dump</string>
    <string name="no_dump_info">Traffic will not be dumped</string>
    <string name="http_server_info">Start an HTTP server for the PCAP download</string>
    <string name="udp_exporter_info">Send the PCAP to a remote UDP receiver</string>
    <string name="tcp_exporter_info">Send the PCAP to a remote TCP receiver (pcap-over-ip)</string>
    <string name="http_server_port">HTTP server port</string>
    <string name="receiver_host">Collector host</string>
    <string name="receiver_port">Collector port</string>
    <string name="traffic_dump">Traffic dump</string>
    <string name="user_guide">User guide</string>
    <string name="open_telegram_group">Telegram group</string>
    <string name="source_code">Source code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vpn_setup_failed">Could not set up the VPN. Ensure that Always-on VPN is disabled</string>
    <string name="app_not_found">Could not find the "%1$s" app</string>
    <string name="stats">Stats</string>
    <string name="active_connections">Active connections</string>
    <string name="dropped_connections">Dropped connections</string>
    <string name="tot_connections">Total connections</string>
    <string name="open_sockets">Open sockets</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_rcvd">Bytes received</string>
    <string name="ipv6_bytes_sent">IPv6 bytes sent</string>
    <string name="ipv6_bytes_rcvd">IPv6 bytes received</string>
    <string name="ipv6_bytes_percentage">IPv6 bytes percentage</string>
    <string name="packets_sent">Packets sent</string>
    <string name="packets_rcvd">Packets received</string>
    <string name="dns_queries">DNS queries</string>
    <string name="search_apps">Search apps</string>
    <string name="no_apps">No apps</string>
    <string name="dns_server">DNS server</string>
    <string name="apps">Apps</string>
    <string name="pcap_file">PCAP file</string>
    <string name="pcap_file_info">Create a PCAP/Pcapng file in the device storage</string>
    <string name="cannot_write_file">Cannot write file</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="pcap_file_action">Traffic saved to the \"%1$s\" file (%2$s)</string>
    <string name="delete_error">Could not delete the file</string>
    <string name="copy_error">Could not write the file</string>
    <string name="capture_running">Capture running</string>
    <string name="notification_msg">%1$s captured, %2$s connections</string>
    <string name="proto_and_port">%1$s, %2$d</string>
    <string name="conn_status_active">Active</string>
    <string name="first_seen">First seen</string>
    <string name="last_seen">Last seen</string>
    <string name="conn_status_closed">Closed</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="older_connections_notice">%1$d older connections not shown</string>
    <string name="about_text">eXcap is a privacy-first, open-source Android network diagnostics tool that captures traffic locally without root</string>
    <string name="get_app">Get it:</string>
    <string name="unknown_app">Unknown</string>
    <string name="phone_app">Phone</string>
    <string name="error">Error</string>
    <string name="conn_status_unreachable">Unreachable</string>
    <string name="other_prefs">Other</string>
    <string name="app_language">App language</string>
    <string name="system_default">System default</string>
    <string name="no_activity_file_selection">No app found to handle file selection</string>
    <string name="file_saved_with_name">File saved as \"%1$s\"</string>
    <string name="socks5_proxy">SOCKS5</string>
    <string name="socks5_redirection">SOCKS5 redirection</string>
    <string name="socks5_summary">Configure the redirection to a SOCKS5 proxy</string>
    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to a SOCKS5 proxy</string>
    <string name="socks5_info">SOCKS5 proxy: %1$s:%2$d</string>
    <string name="socks5_auth">SOCKS5 authentication</string>
    <string name="socks5_auth_summary">Authenticate to the proxy via username and password</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_port">Proxy port</string>
    <string name="root_capture">Capture as root</string>
    <string name="root_capture_summary">Allows eXcap to run with other VPN apps</string>
    <string name="donate">Donate</string>
    <string name="app_log">Log</string>
    <string name="no_data">No data</string>
    <string name="search">Search…</string>
    <string name="app_val">App: %1$s</string>
    <string name="ip_address_val">IP address: %1$s</string>
    <string name="cidr_val">CIDR: %1$s</string>
    <string name="host_val">Host: %1$s</string>
    <string name="protocol_val">Protocol: %1$s</string>
    <string name="capture_prefs">Capture</string>
    <string name="decryption_no_filter_warn">Select a target app when decrypting TLS to avoid losing your connection to the Internet</string>
    <string name="target_apps">Target apps</string>
    <string name="last_capture">Last capture</string>
    <string name="view_all">View all</string>
    <string name="excap_tagline" translatable="false">NETWORK VISIBILITY, ON YOUR DEVICE</string>
    <string name="excap_local_badge">LOCAL-ONLY PROCESSING</string>
    <string name="excap_hero_title">Observe. Understand. Export.</string>
    <string name="excap_hero_subtitle">Inspect app connections without root. Choose a single app for focused debugging or capture the full device.</string>
    <string name="excap_protocols">TCP  ·  UDP  ·  DNS  ·  HTTP  ·  TLS</string>
    <string name="excap_https_note">HTTPS content stays encrypted by default</string>
    <string name="excap_scope_hint">Select a target app below to narrow the capture</string>
    <string name="excap_capture_hint">Tap the status ring or the start action to begin</string>
</resources>