<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@drawable/drawer_gradient"
    android:paddingStart="20dp"
    android:paddingTop="26dp"
    android:paddingEnd="20dp"
    android:paddingBottom="18dp">

    <ImageView
        android:id="@+id/nav_logo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:contentDescription="@string/pcapdroid_app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pcapdroid_app_name"
        android:textColor="@color/onBrand"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/nav_logo"
        app:layout_constraintStart_toEndOf="@id/nav_logo"
        app:layout_constraintTop_toTopOf="@id/nav_logo" />

    <TextView
        android:id="@+id/nav_tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.08"
        android:text="@string/excap_tagline"
        android:textColor="@color/signalMint"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_logo" />

    <TextView
        android:id="@+id/nav_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/excap_https_note"
        android:textColor="#D7E4EC"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/app_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_tagline" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chip_surface"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/chipText"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="v1.0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
